Fix Alignment in Login Page
Align settings page correctly

--- a/src/settings.css
+++ b/src/settings.css
@@ -64,25 +64,22 @@ body{
     color: #ffffff;
 	width: 30rem;
 	background-color: #0275d8;
-    margin-left: 12%;
+    margin-left: 23%;
 }
 
 #username{
     width: 100%;
     height: auto;
-    margin-left: 25%;
 }
 
 #password{
     width: 100%;
     height: auto;
-    margin-left: 25%;
 }
 
 #logout{
-    width: 30rem;
+    width: 100%;
     height: auto;
-    margin-left: 10%;
     background-color: #0275d8;
 }
 
